name:                devManager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sehnpaa/devManager
license:             BSD3
license-file:        LICENSE
author:              Peter Andersson
maintainer:          example@example.com
copyright:           2017 Peter Andersson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable devManager
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Network
                     , Token
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bytestring
                     , either
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , lens-aeson
                     , microlens
                     , scientific
                     , text
